--- a/amazaskin/static/amazaskin/base.css
+++ b/amazaskin/static/amazaskin/base.css
@@ -1,5 +1,5 @@
 :root {
-    --buff: #cfa18a;
+    --buff: #DEAC97;
     --char: #252525;
     --isabelline: #f6f4f1;
     --wisteria: #c3b1e1;
@@ -29,6 +29,7 @@ body {
 nav {
     top: 0;
     left: 0;
+    z-index: 9;
     width: 100%;
     height: 4rem;
     display: flex;
@@ -39,7 +40,6 @@ nav {
 .nav-logo {
     width: 15%;
     height: 100%;
-    fill: var(--char);
 }
 
 .nav-logo span {
@@ -56,7 +56,7 @@ nav {
 
 .nav-item {
     height: min-content;
-    margin-inline: .5rem;
+    margin-inline: 1rem;
 }
 
 .nav-link {
@@ -64,6 +64,7 @@ nav {
     color: var(--char);
     text-decoration: none;
     font-family: 'DM Sans', 'Lexend';
+    transition: opacity .3s ease;
 }
 
 .nav-link::after {
@@ -107,6 +108,11 @@ nav {
 .nav-action-link {
     color: var(--char);
     text-decoration: none;
+    transition: color .3s ease;
+}
+
+.nav-action-link:hover {
+    color: var(--buff);
 }
 
 .sub-nav-actions {
